Create LinkRequest and LinkResponse DTOs. Refactor LinkMapper. Refactor LinkController and LinkServiceImpl.